# make_and_cmake_demo

./: README.md  main.h
inc/: fmul.h
make和cmake例程/: CMakeLists.txt  main.c
make和cmake例程/inc/: fdivi.h  fplus.h  fsub.h
make和cmake例程/src/: fdivi.c  fmul.c  fplus.c  fsub.c
