cmake_minimum_required(VERSION 2.8)
project(MYTEST)
set(EXE "mytest")
set(ALL_SRC_DIR "." "src")
set(ALL_INC_DIR "." "inc")
set(ALL_LIB_DIR "${PROJECT_SOURCE_DIR}/lib/squ" "${PROJECT_SOURCE_DIR}/lib/cb")
set(ALL_LIB_NAME "lsqu" "lcb")

#set(ALL_LIB_DIR "./lib/squ" "./lib/cb")
#set(ALL_LIB_DIR "/home/dong/cmake_demo/test/lib/squ" "/home/dong/cmake_demo/test/lib/cb")

#add_library(yxs_squ "lib/squ/fsqu.c")
#add_library(yxs_cb "lib/cb/fcb.c")
#set(ALL_LIB_NAME "yxs_squ" "yxs_cb")
#set(ALL_LIB_DIR ${PROJECT_BINARY_DIR})

include_directories(${ALL_INC_DIR})
link_directories(${ALL_LIB_DIR})
foreach(SRC_DIR ${ALL_SRC_DIR})
    aux_source_directory(${SRC_DIR} SRCS)
    message(---------------------${SRCS})
endforeach()
add_executable(${EXE} ${SRCS})
target_link_libraries(${EXE} ${ALL_LIB_NAME})